<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sonicsound_background"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="fragments.VideosFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/videos_header"
        android:textColor="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_video_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/videos_search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#66ffffff" />

    <TextView
        android:id="@+id/tv_videos_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:paddingTop="24dp"
        android:text="@string/videos_empty"
        android:textColor="#99ffffff"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>
