<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sonicsound_background"
    android:orientation="vertical"
    tools:context="fragments.PlaylistsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="@string/playlist"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_outline_selector"
            android:focusable="true"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_playlists_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:paddingTop="24dp"
        android:text="@string/playlists_empty_tv"
        android:textColor="#99ffffff"
        android:textSize="18sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_playlists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
