<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sonicsound_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AccountFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_account_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_account_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_plaintext_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/using_plaintext_password"
        android:textColor="#f00"
        android:textSize="20sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_eq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingStart="8dp"
            android:text="@string/eq_enabled"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_replaygain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingStart="8dp"
            android:text="@string/replaygain_enabled"
            android:textColor="#fff" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_clear_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_outline_selector"
        android:text="@string/clear_cache"
        android:textAllCaps="false"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tv_cache_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="#aaa"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_outline_selector"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#fff" />

</LinearLayout>